--- a/RootNode/main/CMakeLists.txt
+++ b/RootNode/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRC_DIRS "src" "../jenkins/workspace/NodeNetwork/NodeNetwork/public/src"
-                    INCLUDE_DIRS "inc" "../jenkins/workspace/NodeNetwork/NodeNetwork/public/inc")
+idf_component_register(SRC_DIRS "src" "../../public/src"
+                    INCLUDE_DIRS "inc" "../../inc")
